Replace lab with blog page; refs #80

--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -47,7 +47,7 @@
         <div class="links">
           <a href="{{ url_for('main.work') }}">Work</a>
           <a href="{{ url_for('main.about') }}">About</a>
-          <a href="{{ url_for('main.lab') }}">Lab</a>
+          <a href="{{ url_for('main.blog') }}">Blog</a>
           <div class="social">
             <a href="https://twitter.com/madebycabin" target="_blank" class="twitter">Twitter</a>
             <a href="https://www.facebook.com/madebycabin" target="_blank" class="facebook">Facebook</a>
