--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -1630,3 +1630,7 @@ body.splash-transition
       clear: none
     .image:nth-of-type(3n + 1)
       clear: left
+
+
+// Page-specific imports {{{1
+@import 'pages/blog'
