--- a/cabin/templates/blog.html
+++ b/cabin/templates/blog.html
@@ -3,7 +3,9 @@
 {% set page = 'blog' %}
 
 {% macro img(item) %}
-  <img src="{{ item.image_url }}" width="{{ item.image_size[0] }}" height="{{ item.image_size[1] }}" alt>
+  <div class="img-wrapper">
+    <img src="{{ item.image_url }}" width="{{ item.image_size[0] }}" height="{{ item.image_size[1] }}" alt>
+  </div>
 {% endmacro %}
 
 {% block content %}
