Add Flickr; refs #80

--- a/cabin/style/pages/blog.styl
+++ b/cabin/style/pages/blog.styl
@@ -44,7 +44,7 @@
       text-transform: uppercase
       margin: 20px 0
 
-    section.tumblr, section.instagram, section.facebook
+    section.tumblr, section.instagram, section.flickr
       margin-bottom: 40px
 
     section.tumblr a
