Trim instagram/flickr containers to tumblr height; refs #80

--- a/cabin/style/pages/blog.styl
+++ b/cabin/style/pages/blog.styl
@@ -35,6 +35,9 @@
           display: block
           opacity: .4
 
+    a.overflow
+      display: none
+
     img
       width: 100%
       height: auto
