Leave yoga circle border color on hover

--- a/cabin/style/pages/yoga.styl
+++ b/cabin/style/pages/yoga.styl
@@ -47,7 +47,7 @@
   .authed tr:not(.past):hover .circle, tr.sel .circle
     background-color: cabin_black
     color: white
-    &, > span
+    span
       border-color: white
   .authed tr:not(.past):hover
     cursor: pointer
