Improve keyframe animations
Better to omit the "to" state, to avoid duplication of the standard
style, and to use translate3d instead of left/top to get acceleration on
mobile safari.

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -97,12 +97,10 @@ button, .button
     animation-iteration-count: infinite
     color: cabin_hl_light
 @keyframes loading-dots
-  0%
-    left: 0
   20%
-    left: 10px
+    transform: translate3d(10px, 0, 0)
   40%
-    left: 20px
+    transform: translate3d(20px, 0, 0)
   60%
     visibility: hidden
 
