--- a/cabin/style/pages/about.styl
+++ b/cabin/style/pages/about.styl
@@ -245,29 +245,17 @@
 
     @keyframes animate-photo-bek
       from
-        left: -500px
-        transform: rotate(0)
+        transform: rotate(0) translate3d(-360px, 0, 0)
         opacity: 0
-      to
-        left: -140px
-        transform: rotate(15deg)
-        opacity: 1
     @keyframes animate-photo-zak
       from
-        top: -500px
-        transform: rotate(-60deg)
+        transform: rotate(-60deg) translate3d(200px, -200px, 0)
         opacity: 0
-      to
-        top: -145px
-        transform: rotate(-30deg)
-        opacity: 1
     @keyframes animate-photo-shadow
       from
         opacity: 0
       50%
         opacity: 0
-      to
-        opacity: 1
 
     section.summary
       > h1
@@ -426,46 +414,20 @@
 
 @keyframes animate-photo-bek-small
   from
-    right: -200px
-    top: -20px
-    transform: scale(.5) rotate(0)
+    transform: scale(.5) rotate(0) translate3d(200px, -60px, 0)
     opacity: 0
-  to
-    right: 0
-    top: 40px
-    transform: scale(.5) rotate(15deg)
-    opacity: 1
 @keyframes animate-photo-zak-small
   from
-    top: -500px
-    transform: scale(.7) rotate(-60deg)
+    transform: scale(.7) rotate(-60deg) translate3d(350px, 0, 0)
     opacity: 0
-  to
-    top: -145px
-    transform: scale(.7) rotate(-30deg)
-    opacity: 1
 @keyframes animate-photo-bek-tiny
   from
-    right: -200px
-    top: 0
-    transform: scale(.5) rotate(0)
+    transform: scale(.5) rotate(0) translate3d(100px, -290px, 0)
     opacity: 0
-  to
-    right: -90px
-    top: 100px
-    transform: scale(.5) rotate(15deg)
-    opacity: 1
 @keyframes animate-photo-zak-tiny
   from
-    top: -300px
-    right: -300px
-    transform: scale(.6) rotate(-60deg)
+    transform: scale(.6) rotate(-60deg) translate3d(100px, 250px, 0)
     opacity: 0
-  to
-    top: -65px
-    right: -200px
-    transform: scale(.6) rotate(-30deg)
-    opacity: 1
 
 
 // When the graph's top point would be bumping into the title, add margin.
