--- a/cabin/style/pages/about.styl
+++ b/cabin/style/pages/about.styl
@@ -258,6 +258,7 @@
         opacity: 0
 
     section.summary
+      margin: 60px 0
       > h1
         font-family: Georgia, serif
         font-size: 20px
@@ -266,7 +267,6 @@
 
     .summary, .partners
       float: right
-      margin-top: 60px
       max-width: 80px + 40px + 630px - (80 + 40)
 
     .partners
