--- a/cabin/templates/project.html
+++ b/cabin/templates/project.html
@@ -95,9 +95,9 @@
     {% set url = url_for('main.project', slug=project.slug, _external=true)|urlquote %}
     {% set title = ("%s: %s by Cabin" % (project.title, project.type))|urlquote %}
     {# If there are no project images (dev-only projects), share the thumbnail
-       image, which is required. If there is one image, share that image. If there
-       is more than one image, we'll be popping open the picker, so just use the
-       thumbnail as a placeholder. -#}
+       image, which is required. If there is one image, share that image. If
+       there is more than one image, we'll be popping open the picker, so just
+       use the thumbnail as a placeholder. -#}
     {% set image_file = project.images[0].file if project.images|length == 1 else project.thumbnail_file %}
     {% set share_image_url = image_url(image_file)|external_url|urlquote %}
     <a class="arrow-left" href="{{ url_for('main.project', slug=project.prev_slug) }}">Previous</a>
