--- a/cabin/templates/project.html
+++ b/cabin/templates/project.html
@@ -78,17 +78,17 @@
         </ul>
       </div>
     </div>
-  {% endif %}
-
-  <div class="images"{% if project.is_slideshow %} data-slideshow="true"{% endif %}>
-  {% for image in project.images %}
-    <div class="placeholder">
-      <img src="{{ blank_img }}" alt
-        {%- if image.shadow %} data-class="shadow"{% endif %}
-        data-src="{{ image_url(image.file) }}" data-height="{{ image.height }}">
+  {% else %}
+    <div class="images"{% if project.is_slideshow %} data-slideshow="true"{% endif %}>
+    {% for image in project.images %}
+      <div class="placeholder">
+        <img src="{{ blank_img }}" alt
+          {%- if image.shadow %} data-class="shadow"{% endif %}
+          data-src="{{ image_url(image.file) }}" data-height="{{ image.height }}">
+      </div>
+    {% endfor %}
     </div>
-  {% endfor %}
-  </div>
+  {% endif %}
 
   <div class="bottom">
   {% with %}
