--- a/cabin/templates/labs/yoga.html
+++ b/cabin/templates/labs/yoga.html
@@ -15,11 +15,21 @@
       <thead><tr>
         <th>
           <div class="small">
-            <span>{% if today %}Today{% else %}Tomorrow{% endif %}</span>
+            <span>
+            {%- if today -%}
+              Today
+            {%- else -%}
+              <span class="d">Tomorrow</span>
+              <span class="m">Tmrw</span>
+            {%- endif -%}
+            </span>
             <span>{{ date.strftime('%b %d') }}</span>
           </div>
         </th>
-        <th colspan="2" class="day">{{ date.strftime('%A') }}</th>
+        <th colspan="2" class="day">
+          <span class="d">{{ date.strftime('%A') }}</span>
+          <span class="m">{{ date.strftime('%a') }}</span>
+        </th>
       </tr></thead>
       <tbody>
       {% for class in classes %}
@@ -27,13 +37,11 @@
         {%- if today and class.time < now %} past{% endif -%}
         {%- if selected.date == date.isoformat() and selected.index == loop.index0 %} sel{% endif -%}
         ">
-          <td>
-            <div class="circle">
-              <span>{{ class.duration }}</span>
-              <span>{{ class.type|first }}</span>
-            </div>
-          <td>{{ timeformat(class.time) }}
-          <td>{{ class.teacher }}
+          <td>{{ timeformat(class.time) }}</td>
+          <td class="type">
+            {{ class.type|first }}<span>/</span>{{ class.duration }}
+          </td>
+          <td>{{ class.teacher }}</td>
         </tr>
       {% endfor %}
       </tbody>
