Remove project image background color once loaded
On Retina, this was causing a peek on some images.

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -311,8 +311,9 @@ body.splash-transition
     position: relative
     .loading-dots
       absolute: left 20px top 15px
-    img
+    .loading-dots + img
       background-color: cabin_grey_light
+    img
       clear: both
       width: 100%
       margin-bottom: 60px
