Use GPU rendering for project images
This *really* fixes the Retina rendering issues the last changeset was
intended to fix.

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -317,6 +317,7 @@ body.splash-transition
       clear: both
       width: 100%
       margin-bottom: 60px
+      -webkit-transform: translateZ(0)  // fixes rendering on Mobile Safari
       vertical-align: top
       &.shadow
         border-radius: 4px 4px 0 0
