--- a/cabin/templates/project.html
+++ b/cabin/templates/project.html
@@ -66,6 +66,7 @@
     </div>
   </div>
 
+  <div class="project-content">
   {% if project.dev_shortlist %}
     <div class="dev-shortlist">
       <h3>Development Shortlist</h3>
@@ -89,6 +90,7 @@
     {% endfor %}
     </div>
   {% endif %}
+  </div>
 
   <div class="bottom">
   {% with %}
