Refactor project view into many subviews

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -83,6 +83,7 @@ button, .button
   font: bold 40px/10px ProximaNova
   color: cabin_grey_med
   transform: translateZ(0)  // try for GPU rendering
+  z-index: 3
   b
     float: left
     width: 10px
